--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "@cloudflare/workers-types": "^4.20240614.0",
     "typescript": "^5.4.5",
     "wrangler": "^3.60.3"
+  },
+  "dependencies": {
+    "zod": "^3.23.8"
   }
 }
