--- a/wrangler.toml
+++ b/wrangler.toml
@@ -73,9 +73,9 @@ database_id = "da1efc6e-01e3-41d3-a5b2-47ac875cb538"
 
 # Bind a KV Namespace. Use KV as persistent storage for small key-value pairs.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#kv-namespaces
-# [[kv_namespaces]]
-# binding = "MY_KV_NAMESPACE"
-# id = "xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
+[[kv_namespaces]]
+binding = "ttc_alerts"
+id = "2898040dac5f4bc3abc6b861cfe6f4fa"
 
 # Bind an mTLS certificate. Use to present a client certificate when communicating with another service.
 # Docs: https://developers.cloudflare.com/workers/wrangler/configuration/#mtls-certificates
