--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-	"name": "ttc-service-alert",
-	"version": "0.0.0",
-	"private": true,
-	"scripts": {
-		"dev": "npx trigger.dev@latest dev",
-		"deploy": "npx trigger.dev@latest deploy"
-	},
-	"dependencies": {
-		"@trigger.dev/sdk": "^3.0.13"
-	},
-	"devDependencies": {
-		"@trigger.dev/build": "^3.0.13"
-	}
+  "name": "ttc-service-alert",
+  "version": "0.0.0",
+  "private": true,
+  "scripts": {
+    "dev": "npx trigger.dev@latest dev",
+    "deploy": "npx trigger.dev@latest deploy"
+  },
+  "dependencies": {
+    "@trigger.dev/sdk": "3.2.1"
+  },
+  "devDependencies": {
+    "@trigger.dev/build": "3.2.1"
+  }
 }
