--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "deploy": "npx trigger.dev@latest deploy"
   },
   "dependencies": {
-    "@trigger.dev/sdk": "3.3.6"
+    "@trigger.dev/sdk": "3.3.6",
+    "valibot": "^1.0.0-beta.9"
   },
   "devDependencies": {
-    "@trigger.dev/build": "3.3.6"
+    "@cloudflare/workers-types": "^4.20241205.0",
+    "@trigger.dev/build": "3.3.6",
+    "typescript": "^5.7.2"
   }
 }
